--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["bbc.co.uk", "5336", "100","10"],
+            "args": ["127.0.0.1", "10","1", "53"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
