--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["192.168.245.5","-p5335","-c 1","-s 1","-t 2","-d"],
+            "args": ["192.168.245.5","-p5335","-c 3","-s 2","-t 2","--deterministic","--verbose"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
