--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["192.168.245.5","-p 5335","-c 10","-s 2","-t 2","--deterministic","--verbose"],
-            "stopAtEntry": true,
+            "args": ["192.168.245.5","-p 5335","-c 200","-s 10","-t 2","--deterministic","--verbose"],
+            "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
