--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["192.168.245.5","-p 5335","-c 200","-s 10","-t 2","--deterministic","--verbose"],
+            "args": ["10.0.0.4","-p 5335","-c 1026","-s 100","--deterministic","--debug"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
